sandbox/output
OneHundredDoors.java:26: error: ')' expected
                    if (DS.C.equals(doorStates.get(door)) {
                                                         ^
OneHundredDoors.java:28: error: ')' expected
                    } else if (DS.OPEN.equals(doorStates.get(door)) {
                                                                   ^
2 errors
